# longomatch

./: .gitignore  AUTHORS  COPYING  ChangeLog  LongoMatch.mds  LongoMatch.sln  Makefile.am  Makefile.in  Makefile.include  Makefile.win32  NEWS  PCF.zip.pgp  Packages.mdse  README  RELEASE  aclocal.m4  autogen.sh  configure  configure.ac  env.in  installer.sh  liblongomatch.mdp  longomatch.doap  makeBundle.sh
CesarPlayer/: AssemblyInfo.cs  AssemblyInfo.cs.in  BaconVideoWidget.cs  BaconVideoWidgetAspectRatio.cs  BaconVideoWidgetMetadataType.cs  BufferingHandler.cs  BvwError.cs  CapturerBin.cs  CesarPlayer.csproj  CesarPlayer.dll.config.in  CesarPlayer.mdp  CesarPlayer.prjx  DSPlayer.cs  ErrorHandler.cs  GotRedirectHandler.cs  GstError.cs  GstPlayer.cs  GstPlayerAspectRatio.cs  GstPlayerMetadataType.cs  GstUseType.cs  Handlers.cs  IMetadataReader.cs  IPlayer.cs  ISimplePlayer.cs  Makefile.am  Makefile.in  MultimediaFactory.cs  ObjectManager.cs  PlayerBin.cs  PlayerMaker.cs  SignalUtils.cs  StateChangedHandler.cs  TickHandler.cs  TimeLine.cs  TimeString.cs  TitleChangeHandler.cs  VolumeWindow.cs
CesarPlayer/Capturer/: CaptureProperties.cs  ErrorHandler.cs  FakeCapturer.cs  GccAudioEncoderType.cs  GccError.cs  GccType.cs  GccVideoEncoderType.cs  GccVideoMuxerType.cs  GstCameraCapturer.cs  GstVideoCapturer.cs  GvcAudioEncoderType.cs  GvcUseType.cs  GvcVideoEncoderType.cs  ICapturer.cs  LiveSourceTimer.cs  ObjectManager.cs
CesarPlayer/Common/: CaptureSettings.cs  Constants.cs  EncodingProfiles.cs  EncodingSettings.cs  Enum.cs  Handlers.cs  VideoStandards.cs
CesarPlayer/Editor/: AudioCodec.cs  AudioQuality.cs  AviMerger.cs  AvidemuxMerger.cs  ConcatMerger.cs  DVDMerger.cs  EditorState.cs  ErrorHandler.cs  GenericMerger.cs  GnlMkvEditor.cs  GnonlinEditor.cs  GstVideoCapturer.cs  GstVideoSplitter.cs  IMerger.cs  IMuxer.cs  ISplitter.cs  IVideoEditor.cs  IVideoSplitter.cs  MatroskaMerger.cs  MatroskaMuxer.cs  MencoderVideoEditor.cs  PercentCompletedHandler.cs  VideoCodec.cs  VideoFormat.cs  VideoMuxer.cs  VideoQuality.cs  VideoSegment.cs  VideoSplitterType.cs
CesarPlayer/Gui/: CapturerBin.cs  PlayerBin.cs  VolumeWindow.cs
CesarPlayer/Handlers/: BufferingHandler.cs  ErrorHandler.cs  GotRedirectHandler.cs  Handlers.cs  StateChangedHandler.cs  TickHandler.cs  TitleChangeHandler.cs
CesarPlayer/Player/: DSPlayer.cs  GstAspectRatio.cs  GstAudioOutType.cs  GstDVDEvent.cs  GstError.cs  GstMetadataType.cs  GstPlayer.cs  GstPlayerAspectRatio.cs  GstPlayerMetadataType.cs  GstUseType.cs  GstVideoProperty.cs  IMetadataReader.cs  IPlayer.cs  ISimplePlayer.cs  ObjectManager.cs  PlayerBin.cs  PlayerMaker.cs
CesarPlayer/Utils/: Device.cs  FramesCapturer.cs  GstPlayerMetadataType.cs  IFramesCapturer.cs  IMetadataReader.cs  MediaFile.cs  PreviewMediaFile.cs  TimeString.cs
CesarPlayer/gapi/: discoverer.api
CesarPlayer/gtk-gui/: CesarPlayer.PlayerBin.cs  CesarPlayer.TimeLine.cs  CesarPlayer.VolumeWindow.cs  LongoMatch.Gui.CapturerBin.cs  LongoMatch.Gui.PlayerBin.cs  LongoMatch.Gui.VolumeWindow.cs  LongoMatch.Video.Player.PlayerBin.cs  LongoMatch.Video.PlayerBin.cs  LongoMatch.Video.VolumeWindow.cs  generated.cs  gui.stetic  longomatch.CapturerBin.cs  objects.xml
LongoMatch/: AssemblyInfo.cs  AssemblyInfo.cs.in  ButtonsWidget.cs  CalendarPopup.cs  CapturePropertiesWidget.cs  DB.cs  DBManager.cs  EventsManager.cs  FileData.cs  FileDataListWidget.cs  FileDescriptionWidget.cs  GtkTimescale.cs  Handlers.cs  IPlayList.cs  LongoMatch.bat  LongoMatch.csproj  LongoMatch.mdp  LongoMatch.prjx  LongoMatchGtk.mdp  Main.cs  MainWindow.cs  Makefile.am  Makefile.in  MediaTimeNode.cs  NewProjectDialog.cs  NewSectionsTemplatesFiles.cs  ObjectManager.cs  OpenProjectDialog.cs  PixbufTimeNode.cs  PlayList.cs  PlayListNode.cs  PlayListTimeNode.cs  PlayListTreeView.cs  PlayListWidget.cs  PlayListWriter.cs  PlayersListWidget.cs  PrecisionWidget.cs  Sections.cs  SectionsPropertiesWidget.cs  SectionsReader.cs  (+30 more)
LongoMatch.Core/: Config.cs  LongoMatch.Core.mdp  Makefile.am
LongoMatch.Core/Common/: CaptureSettings.cs  Cloner.cs  Color.cs  Constants.cs  Device.cs  EncodingProfiles.cs  EncodingSettings.cs  Enums.cs  Image.cs  Job.cs  PlayList.cs  VideoStandards.cs
LongoMatch.Core/Handlers/: Handlers.cs  Multimedia.cs
LongoMatch.Core/Interfaces/: IDatabase.cs  IPlayList.cs  IPlaylistWidget.cs  IRenderingJobsManager.cs  ISubCategory.cs  ITemplates.cs  ITemplatesService.cs  ITimelineNode.cs
LongoMatch.Core/Stats/: CategoryStats.cs  GameUnitStats.cs  GameUnitsStats.cs  PercentualStat.cs  PlayersStats.cs  ProjectStats.cs  Stat.cs  SubCategoryStat.cs
LongoMatch.Core/Store/: Category.cs  Drawing.cs  GameUnit.cs  GameUnitsList.cs  HotKey.cs  MediaFile.cs  PixbufTimeNode.cs  Play.cs  PlayListPlay.cs  Player.cs  Project.cs  ProjectDescription.cs  SubCategory.cs  TagStore.cs  Time.cs  TimeNode.cs  TimelineNode.cs
LongoMatch.GUI/: LongoMatch.GUI.mdp  Makefile.am
LongoMatch.GUI.Multimedia/: AssemblyInfo.cs  AssemblyInfo.cs.in  CesarPlayer.csproj  LongoMatch.GUI.Multimedia.mdp  LongoMatch.Gui.Multimedia.dll.config  Makefile.am  a.dll.mdb  cesarplayer.pc
LongoMatch.GUI.Multimedia/Gui/: CapturerBin.cs  PlayerBin.cs  VolumeWindow.cs
LongoMatch.GUI.Multimedia/gtk-gui/: LongoMatch.Gui.CapturerBin.cs  LongoMatch.Gui.PlayerBin.cs  LongoMatch.Gui.VolumeWindow.cs  gui.stetic  objects.xml
LongoMatch.GUI/Gui/: Cairo.cs  GUIToolkit.cs  Helpers.cs  MainWindow.cs
LongoMatch.GUI/gtk-gui/: LongoMatch.Gui.Base.TemplatesEditorBase.cs  LongoMatch.Gui.Base.TimelineWidgetBase.cs  LongoMatch.Gui.Component.ButtonsWidget.cs  (+50 more)
LongoMatch.Multimedia/: LongoMatch.Multimedia.mdp  Makefile.am  MultimediaFactory.cs
LongoMatch.Services/: LongoMatch.Services.mdp  Makefile.am
libcesarplayer/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.win32  bacon-video-widget-gst-0.10.c  bacon-video-widget.h  gst-camera-capturer.c  gst-camera-capturer.h  gst-helpers.c  gst-helpers.h  gst-video-editor.c  libcesarplayer.sln  libcesarplayer.vcproj  liblongomatch.mdp  longomatch-aspect-frame.c  longomatch-aspect-frame.h  video-utils.c  video-utils.h
(+3149 files in other folders)
