ASSEMBLY = LongoMatch
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_CORE)

SOURCES = \
	Common/Cairo.cs \
	Common/CaptureSettings.cs \
	Common/Cloner.cs \
	Common/ConsoleCrayon.cs \
	Common/Constants.cs \
	Common/Device.cs \
	Common/EncodingProfiles.cs \
	Common/EncodingSettings.cs \
	Common/Enums.cs \
	Common/Images.cs \
	Common/Job.cs \
	Common/Log.cs \
	Common/PlayList.cs \
	Common/SerializableObject.cs \
	Common/VideoStandards.cs \
	Config.cs \
	Handlers/Handlers.cs \
	Interfaces/IDatabase.cs \
	Interfaces/IPlayList.cs \
	Interfaces/IPlaylistWidget.cs \
	Interfaces/IRenderingJobsManager.cs \
	Interfaces/ISubCategory.cs \
	Interfaces/ITag.cs \
	Interfaces/ITemplates.cs \
	Interfaces/ITemplatesService.cs \
	Store/Category.cs \
	Store/Drawing.cs \
	Store/GameUnit.cs \
	Store/GameUnitsList.cs \
	Store/TimelineNode.cs \
	Store/HotKey.cs \
	Store/MediaFile.cs \
	Store/PixbufTimeNode.cs \
	Store/Play.cs \
	Store/Player.cs \
	Store/PlayListPlay.cs \
	Store/Project.cs \
	Store/ProjectDescription.cs \
	Store/SubCategory.cs \
	Store/Tag.cs \
	Store/TagStore.cs \
	Store/Templates/CategoriesTemplate.cs \
	Store/Templates/SubCategoryTemplate.cs \
	Store/Templates/TeamTemplate.cs \
	Store/Templates/Template.cs \
	Store/Time.cs \
	Store/TimeNode.cs

RESOURCES =

include $(top_srcdir)/build/build.mk
