ASSEMBLY = LongoMatch
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_CORE)

SOURCES = \
	Common/CaptureSettings.cs \
	Common/Cloner.cs \
	Common/ConsoleCrayon.cs \
	Common/Constants.cs \
	Common/Device.cs \
	Common/EncodingProfiles.cs \
	Common/EncodingSettings.cs \
	Common/Enums.cs \
	Common/Image.cs \
	Common/Job.cs \
	Common/Log.cs \
	Common/PlayList.cs \
	Common/SerializableObject.cs \
	Common/VideoStandards.cs \
	Config.cs \
	Handlers/Handlers.cs \
	Handlers/Multimedia.cs \
	Interfaces/GUI/IBusyDialog.cs \
	Interfaces/GUI/ICapturer.cs \
	Interfaces/GUI/IGUIToolkit.cs \
	Interfaces/GUI/IMainWindow.cs \
	Interfaces/GUI/IPlayer.cs \
	Interfaces/GUI/IPlaylistWidget.cs \
	Interfaces/GUI/IRenderingStateBar.cs \
	Interfaces/Multimedia/IFramesCapturer.cs \
	Interfaces/Multimedia/IMultimediaToolkit.cs \
	Interfaces/Multimedia/IVideoEditor.cs \
	Interfaces/IDatabase.cs \
	Interfaces/IPlayList.cs \
	Interfaces/IRenderingJobsManager.cs \
	Interfaces/ISubCategory.cs \
	Interfaces/ITag.cs \
	Interfaces/ITemplates.cs \
	Interfaces/ITemplatesService.cs \
	Interfaces/ITimelineNode.cs \
	Store/Category.cs \
	Store/Drawing.cs \
	Store/GameUnit.cs \
	Store/GameUnitsList.cs \
	Store/TimelineNode.cs \
	Store/HotKey.cs \
	Store/MediaFile.cs \
	Store/PixbufTimeNode.cs \
	Store/Play.cs \
	Store/Player.cs \
	Store/PlayListPlay.cs \
	Store/Project.cs \
	Store/ProjectDescription.cs \
	Store/SubCategory.cs \
	Store/Tag.cs \
	Store/TagStore.cs \
	Store/Templates/CategoriesTemplate.cs \
	Store/Templates/SubCategoryTemplate.cs \
	Store/Templates/TeamTemplate.cs \
	Store/Time.cs \
	Store/TimeNode.cs

RESOURCES =

include $(top_srcdir)/build/build.mk
