ASSEMBLY = LongoMatch.GUI.Multimedia
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_GUI_MULTIMEDIA)

SOURCES = \
	gtk-gui/generated.cs \
	gtk-gui/LongoMatch.Gui.CapturerBin.cs \
	gtk-gui/LongoMatch.Gui.PlayerBin.cs \
	gtk-gui/LongoMatch.Gui.VolumeWindow.cs \
	Gui/CapturerBin.cs \
	Gui/PlayerBin.cs \
	Gui/VolumeWindow.cs

RESOURCES = \
	gtk-gui/objects.xml \
	gtk-gui/gui.stetic

include $(top_srcdir)/build/build.mk

