ASSEMBLY = LongoMatch.GUI
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_GUI)

SOURCES = \
	gtk-gui/generated.cs \
	gtk-gui/LongoMatch.Gui.Base.TemplatesEditorBase.cs \
	gtk-gui/LongoMatch.Gui.Base.TimelineWidgetBase.cs \
	gtk-gui/LongoMatch.Gui.Component.ButtonsWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.CategoryProperties.cs \
	gtk-gui/LongoMatch.Gui.Component.DrawingToolBox.cs \
	gtk-gui/LongoMatch.Gui.Component.DrawingWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.GameUnitsEditor.cs \
	gtk-gui/LongoMatch.Gui.Component.GameUnitsTagger.cs \
	gtk-gui/LongoMatch.Gui.Component.GameUnitWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.NotesWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.PlayerProperties.cs \
	gtk-gui/LongoMatch.Gui.Component.PlayersListTreeWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.PlayersTaggerWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.PlayListWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.PlaysListTreeWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.ProjectDetailsWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.ProjectListWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.RenderingStateBar.cs \
	gtk-gui/LongoMatch.Gui.Component.StringTaggerWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.TaggerWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.TagsTreeWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.TeamTaggerWidget.cs \
	gtk-gui/LongoMatch.Gui.Dialog.BusyDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.DrawingTool.cs \
	gtk-gui/LongoMatch.Gui.Dialog.EditCategoryDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.EditPlayerDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.EndCaptureDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.EntryDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.FramesCaptureProgressDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.HotKeySelectorDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.NewProjectDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.OpenProjectDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.PlayersSelectionDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.ProjectSelectionDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.ProjectsManager.cs \
	gtk-gui/LongoMatch.Gui.Dialog.RenderingJobsDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.SnapshotsDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.SubCategoryTagsEditor.cs \
	gtk-gui/LongoMatch.Gui.Dialog.TaggerDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.TemplateEditorDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.TemplatesManager.cs \
	gtk-gui/LongoMatch.Gui.Dialog.UpdateDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.VideoEditionProperties.cs \
	gtk-gui/LongoMatch.Gui.Dialog.Win32CalendarDialog.cs \
	gtk-gui/LongoMatch.Gui.MainWindow.cs \
	gtk-gui/LongoMatch.Gui.Popup.CalendarPopup.cs \
	gtk-gui/LongoMatch.Gui.Popup.TransparentDrawingArea.cs \
	Gui/Base/TemplatesEditorBase.cs \
	Gui/Base/TimelineWidgetBase.cs \
	Gui/Base/TimeScaleBase.cs \
	Gui/Component/ButtonsWidget.cs \
	Gui/Component/CategoriesTemplateEditor.cs \
	Gui/Component/CategoryProperties.cs \
	Gui/Component/DrawingToolBox.cs \
	Gui/Component/DrawingWidget.cs \
	Gui/Component/GameUnitsEditor.cs \
	Gui/Component/GameUnitsTagger.cs \
	Gui/Component/GameUnitTimeScale.cs \
	Gui/Component/GameUnitsTimelineWidget.cs \
	Gui/Component/GameUnitWidget.cs \
	Gui/Component/NotesWidget.cs \
	Gui/Component/PlayerProperties.cs \
	Gui/Component/PlayersListTreeWidget.cs \
	Gui/Component/PlayersTaggerWidget.cs \
	Gui/Component/PlayListWidget.cs \
	Gui/Component/PlaysListTreeWidget.cs \
	Gui/Component/ProjectDetailsWidget.cs \
	Gui/Component/ProjectListWidget.cs \
	Gui/Component/RenderingStateBar.cs \
	Gui/Component/StringTaggerWidget.cs \
	Gui/Component/TaggerWidget.cs \
	Gui/Component/TagsTreeWidget.cs \
	Gui/Component/TeamTaggerWidget.cs \
	Gui/Component/TeamTemplateEditor.cs \
	Gui/Component/TimelineLabelsWidget.cs \
	Gui/Component/TimeLineWidget.cs \
	Gui/Component/TimeReferenceWidget.cs \
	Gui/Component/TimeScale.cs \
	Gui/Dialog/About.cs \
	Gui/Dialog/BusyDialog.cs \
	Gui/Dialog/DrawingTool.cs \
	Gui/Dialog/EditCategoryDialog.cs \
	Gui/Dialog/EditPlayerDialog.cs \
	Gui/Dialog/EndCaptureDialog.cs \
	Gui/Dialog/EntryDialog.cs \
	Gui/Dialog/FramesCaptureProgressDialog.cs \
	Gui/Dialog/HotKeySelectorDialog.cs \
	Gui/Dialog/NewProjectDialog.cs \
	Gui/Dialog/OpenProjectDialog.cs \
	Gui/Dialog/PlayersSelectionDialog.cs \
	Gui/Dialog/ProjectSelectionDialog.cs \
	Gui/Dialog/ProjectsManager.cs \
	Gui/Dialog/RenderingJobsDialog.cs \
	Gui/Dialog/SnapshotsDialog.cs \
	Gui/Dialog/SubCategoryTagsEditor.cs \
	Gui/Dialog/TaggerDialog.cs \
	Gui/Dialog/TemplateEditorDialog.cs \
	Gui/Dialog/TemplatesManager.cs \
	Gui/Dialog/UpdateDialog.cs \
	Gui/Dialog/VideoEditionProperties.cs \
	Gui/Dialog/Win32CalendarDialog.cs \
	Gui/Popup/CalendarPopup.cs \
	Gui/Popup/MessagePopup.cs \
	Gui/TransparentDrawingArea.cs \
	Gui/TreeView/CategoriesTreeView.cs \
	Gui/TreeView/ListTreeViewBase.cs \
	Gui/TreeView/PlayerPropertiesTreeView.cs \
	Gui/TreeView/PlayersTreeView.cs \
	Gui/TreeView/PlayListTreeView.cs \
	Gui/TreeView/PlaysTreeView.cs \
	Gui/TreeView/RenderingJobsTreeView.cs \
	Gui/TreeView/SubCategoriesTreeView.cs \
	Gui/TreeView/TagsTreeView.cs \
	Gui/Cairo.cs \
	Gui/GUIToolkit.cs \
	Gui/Helpers.cs \
	Gui/MainWindow.cs

RESOURCES = \
	$(top_srcdir)/images/longomatch.png\
	$(top_srcdir)/images/stock_draw-line-45.png\
	$(top_srcdir)/images/stock_draw-circle-unfilled.png\
	$(top_srcdir)/images/stock_draw-line-ends-with-arrow.png\
	$(top_srcdir)/images/stock_draw-rectangle-unfilled.png\
	$(top_srcdir)/images/stock_draw-freeform-line.png\
	$(top_srcdir)/images/camera-video.png\
	$(top_srcdir)/images/video.png \
	gtk-gui/objects.xml \
	gtk-gui/gui.stetic

include $(top_srcdir)/build/build.mk
