ASSEMBLY = LongoMatch.Multimedia
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_MULTIMEDIA)

SOURCES = \
	Capturer/GstCameraCapturer.cs \
	Capturer/FakeCapturer.cs \
	Capturer/LiveSourceTimer.cs \
	Capturer/ObjectManager.cs \
	Common/Enum.cs \
	Common/Constants.cs \
	Common/Handlers.cs \
	Editor/EditorState.cs \
	Editor/VideoSegment.cs \
	Editor/GstVideoSplitter.cs \
	Interfaces/IFramesCapturer.cs \
	Interfaces/ICapturer.cs \
	Interfaces/IVideoEditor.cs \
	Interfaces/IPlayer.cs \
	MultimediaFactory.cs \
	Player/GstPlayer.cs \
	Player/ObjectManager.cs \
	Utils/FramesCapturer.cs \
	Utils/GStreamer.cs \
	Utils/IMetadataReader.cs \
	Utils/MpegRemuxer.cs \
	Utils/PreviewMediaFile.cs \
	Utils/TimeString.cs \
	Utils/VideoDevice.cs


include $(top_srcdir)/build/build.mk
