ASSEMBLY = LongoMatch.Services
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_SERVICES)

SOURCES = \
	Services/PlaylistManager.cs \
	Services/VideoDrawingsManager.cs \
	Services/ProjectsManager.cs \
	Services/TemplatesService.cs \
	Services/EventsManager.cs \
	Services/Core.cs \
	Services/HotKeysManager.cs \
	Services/DataBase.cs \
	Services/RenderingJobsManager.cs

include $(top_srcdir)/build/build.mk
