ASSEMBLY = LongoMatch.Services
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_SERVICES)

SOURCES = \
	Services/Core.cs \
	Services/DataBase.cs \
	Services/EventsManager.cs \
	Services/GameUnitsManager.cs \
	Services/HotKeysManager.cs \
	Services/PlaylistManager.cs \
	Services/ProjectsManager.cs \
	Services/TemplatesService.cs \
	Services/RenderingJobsManager.cs \
	Services/VideoDrawingsManager.cs

include $(top_srcdir)/build/build.mk
