## Process this file with automake to produce Makefile.in


AM_CPPFLAGS = \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	$(CESARPLAYER_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

BVWMARSHALFILES = baconvideowidget-marshal.c baconvideowidget-marshal.h
GLIB_GENMARSHAL=`pkg-config --variable=glib_genmarshal glib-2.0`
BUILT_SOURCES = $(BVWMARSHALFILES)

baconvideowidget-marshal.h: baconvideowidget-marshal.list
	( $(GLIB_GENMARSHAL) --prefix=baconvideowidget_marshal $(srcdir)/baconvideowidget-marshal.list --header > baconvideowidget-marshal.h )
baconvideowidget-marshal.c: baconvideowidget-marshal.h
	( $(GLIB_GENMARSHAL) --prefix=baconvideowidget_marshal $(srcdir)/baconvideowidget-marshal.list --body --header > baconvideowidget-marshal.c )


pkglib_LTLIBRARIES = \
	libcesarplayer.la

libcesarplayer_la_SOURCES = \
	$(BVWMARSHALFILES) \
	bacon-video-widget.h\
	bacon-video-widget-gst-0.10.c\
	longomatch-aspect-frame.h\
	longomatch-aspect-frame.c\
	gst-camera-capturer.c\
	gst-camera-capturer.h\
	gst-helpers.c\
	gst-helpers.h\
	video-utils.c\
	video-utils.h

libcesarplayer_la_LDFLAGS = \
	$(CESARPLAYER_LIBS)
	
CLEANFILES = $(BUILT_SOURCES)
	
EXTRA_DIST = \
	baconvideowidget-marshal.list

